--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 </head>
 <body>
     <h2>Fresh Fish and Vegetables</h2>
-    
+    <p>added:
+        <ol type="i">
+        <li>mangos</li>
+        <li>oranges</li>
+        <li>bananas</li>
+        <li>grapes</li>
+        <li>apples</li><br><br></ol> 
+        more fruits coming soon
+    </p>
 </body>
 </html>
