--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li>bananas</li>
         <li>grapes</li>
         <li>apples</li><br><br></ol> 
-        more fruits coming soon
+        ...more fruits coming soon
     </p>
 </body>
 </html>
